update toolschain to 2025-05-20-nightly, h_1_0 can run normally now

--- a/arceos/tour/h_1_0/Cargo.toml
+++ b/arceos/tour/h_1_0/Cargo.toml
@@ -16,3 +16,4 @@ sbi-rt = { version = "0.0.2", features = ["integer-impls", "legacy"] }
 tock-registers = "0.8.1"
 memoffset = { version = ">=0.6.5", features = ["unstable_const"] }
 axlog = { workspace = true }
+cfg-if = "1.0"
